--- a/index.html
+++ b/index.html
@@ -6,48 +6,54 @@
     <meta name="viewport" content="width=device-width">
     <title>Discover Movies</title>
     <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Roboto" rel="stylesheet">
 </head>
 
 <body>
     <header role="banner">
         <h1 class="page-title">Discover Movies</h1>
+        <form>
+                <fieldset>
+                    <section>
+                        <label for="search-by-genre">Search by genre:</label>
+                        <select id="search-by-genre">
+                            <option></option>
+                            <option value="28">Action</option>
+                            <option value="12">Adventure</option>
+                            <option value="16">Animation</option>
+                            <option value="35">Comedy</option>
+                            <option value="80">crime</option>
+                            <option value="99">Documentary</option>
+                            <option value="18">Drama</option>
+                            <option value="10751">Family</option>
+                            <option value="14">Fantasy</option>
+                            <option value="36">History</option>
+                            <option value="27">Horror</option>
+                            <option value="10402">Music</option>
+                            <option value="9648">Mystery</option>
+                            <option value="10749">Romance</option>
+                            <option value="878">Science Fiction</option>
+                            <option value="10770">TV Movie</option>
+                            <option value="53">Thriller</option>
+                            <option value="10752">War</option>
+                            <option value="37">Western</option>
+                        </select>
+                        <button type="submit" class=" search search-by-genre"> Search </button>
+                    </section>
+                </fieldset>
+            </form>
     </header>
     <main role="main">
-        <form>
- 
-            <fieldset>
-                <section>
-                    <label for="search-by-genre">Search by genre:</label>
-                    <select id="search-by-genre">
-                        <option></option>
-                        <option value="28">Action</option>
-                        <option value="12">Adventure</option>
-                        <option value="16">Animation</option>
-                        <option value="35">Comedy</option>
-                        <option value="80">crime</option>
-                        <option value="99">Documentary</option>
-                        <option value="18">Drama</option>
-                        <option value="10751">Family</option>
-                        <option value="14">Fantasy</option>
-                        <option value="36">History</option>
-                        <option value="27">Horror</option>
-                        <option value="10402">Music</option>
-                        <option value="9648">Mystery</option>
-                        <option value="10749">Romance</option>
-                        <option value="878">Science Fiction</option>
-                        <option value="10770">TV Movie</option>
-                        <option value="53">Thriller</option>
-                        <option value="10752">War</option>
-                        <option value="37">Western</option>
-                    </select>
-                    <button type="submit" class=" search search-by-genre"> Search </button>
-                </section>
-            </fieldset>
-        </form>
-        <div class="js-results">
+        
+        <section class="api-results">
+            <h2 class="page-title movies" hidden>Results</h2>
+            <div class="js-results" hidden></div>
 
-        </div>
 
+            <h2 class="page-title">Discover Popular Movies</h2>
+            <div class="js-popular-movies"></div>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
